--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Transportes Canarinho - Relatórios Avançados</title>
+  <title>Transportes Canarinho - Sistema de Pneus</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#0f172a" />
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -1074,7 +1074,7 @@
 </head>
 <body>
   <header>
-    <h1>Transportes Canarinho - Relatórios</h1>
+    <h1>Transportes Canarinho - Sistema de Pneus</h1>
   </header>
   
   <div class="tabs-container">
@@ -1086,7 +1086,7 @@
       <button class="tab-btn" data-tab="performance">Performance</button>
       <button class="tab-btn" data-tab="fogos">Controle Fogos</button>
       <!-- NOVA ABA -->
-      <button class="tab-btn" data-tab="movimento-pneus">Movimento Pneus</button>
+      <button class="tab-btn" data-tab="movimento-pneus">Montagem Veículos</button>
     </div>
   </div>
 
@@ -1210,7 +1210,6 @@
             <button onclick="exportStockToExcel()" class="btn-success">
               Exportar Excel
             </button>
-            <!-- BOTÃO ATUALIZAR RELATÓRIO REMOVIDO -->
           </div>
         </div>
 
@@ -1547,7 +1546,7 @@
     <div id="tab-movimento-pneus" class="tab-content hidden">
       <div class="reports-container">
         <div class="report-header">
-          <h2 class="report-title">Movimentação de Pneus nos Veículos</h2>
+          <h2 class="report-title">Montagem de Veículos</h2>
           <div class="controls-row">
             <button onclick="openAddVeiculoModal()" class="btn-success">
               ➕ Adicionar Veículo
@@ -1653,7 +1652,7 @@
     <!-- NOVO BOTÃO NA NAVEGAÇÃO -->
     <button class="nav-btn" data-tab="movimento-pneus">
       <span class="nav-icon">🎯</span>
-      <span>Posição</span>
+      <span>Montagem</span>
     </button>
   </div>
 
